2010-05-25 John Wu <John dot Wu at ACM dot org>
	* configure.ac: replace the obsolete command AC_OUTPUT_COMMANDS
	with AC_CONFIG_COMMANDS, add integer version version number as
	macro FASTBIT_IBIS_INT_VERSION, update the output command to
	better handle the substitution of PACKAGE_ prefix with FASTBIT_
	prefix (to address a problem noticed by Valeria Lorezetti)

2010-05-21 John Wu <John dot Wu at ACM dot org>
	* src/capi.h, src/capi.cpp: minor clean up of the doxygen
	documentation

2010-05-21 Georgiy Zhytar <Georgiy dot Zhytar at solarwinds dot com>
	* src/capi.h, src/capi.cpp: add function fastbit_reorder_partition

2010-05-19 John Wu <John dot Wu at ACM dot org>
	* configure.ac, src/fastbit-config.h.in: check for the presense of
	function getpwuid_r
	* src/util.cpp: add the use of macro HAVE_GETPWUID_R
	* src/utilidor.h, src/utilidor.cpp: add a version of quick sort
	for strings stored in array_t<const char*>, all existing string
	sortign functions perform whole string comparisons using standard
	system calls.
	* src/category.h, src/category.cpp: move ibis::dictionary into its
	own file
	* src/dictionary.h, src/dictionary.cpp: remove the use of std::map
	to reduce the time needed to read a dictionary file, add a
	header to the dictionary file (new code passed make check)

2010-05-18 John Wu <John.Wu at ACM.org>
	* src/util.cpp:1104 comment the delete statement, the pointer was
	returned by a old-style getpwuid which can not be deleted (to
	address crash reported by Jason Chambers)

2010-05-17 John Wu <John.Wu at ACM.org>
	* src/part.h: add function ibis::part::rename
	* src/part.cpp: change function gatherParts to keep the new
	partitions that has the same name but different in other regards
	as suggested by Valeria Lorezetti
	* src/fileManager.h, src/fileManager.cpp: add
	fileManager::softWriteLock to avoid indefinite wait in
	ibis::fileManager::clear (suggested by Luca Deri)
	* src/bord.cpp: change bord::part::groupby to return an empty