@@ -258,6 +258,11 @@ extern "C" {
     FASTBIT_DLLSPEC const char* fastbit_get_logfile();
     ///@brief Return the file pointer to the log file.
     FASTBIT_DLLSPEC FILE* fastbit_get_logfilepointer();
+
+    ///@brief Return the software version as a string.
+    FASTBIT_DLLSPEC const char* fastbit_get_version_string();
+    ///@brief Return the software version as an integer.
+    FASTBIT_DLLSPEC int fastbit_get_version_number();
 #ifdef __cplusplus
 }
 #endif
